# GhidraX

./: .gitignore  AGENTS.md  README.md  RESTORATION_PLAN.md  deploy.bat  find_stubs.py  flow_comparison_report.txt  heritage_comparison_report.txt  patch_path.py  pyproject.toml
cpp/: CMakeLists.txt  build.bat  decompiler_bind.cpp  sleigh_bind.cpp
docs/: progress.md
ida_plugin/: ghidra_decompiler.py
native/: CMakeLists.txt  build.bat
python/: pattern_corpus.py  progress.md
python/ghidra/analysis/: ancestor.py  constseq.py  double.py  flow.py  funcdata.py  heritage.py  jumptable.py  merge.py  prefersplit.py  rangeutil.py  signature.py  subflow.py
python/ghidra/arch/: architecture.py  inject.py  inject_sleigh.py  loadimage_xml.py  override.py  pcodecompile.py  raw_arch.py  userop.py
python/ghidra/block/: block.py  blockaction.py
python/ghidra/console/: __init__.py  ghidra_arch.py  ghidra_process.py  ifacedecomp.py  interface.py  protocol.py  signature_ghidra.py  subsystems.py
python/ghidra/core/: capability.py  compression.py  expression.py  filemanage.py  int128.py  marshal.py  multiprecision.py  xml_arch.py
python/ghidra/database/: cpool.py  database.py  varmap.py
python/ghidra/emulate/: emulateutil.py
python/ghidra/fspec/: fspec.py  paramid.py
python/ghidra/ir/: cover.py  op.py  typeop.py  variable.py  varnode.py
python/ghidra/output/: printc.py  printjava.py  printlanguage.py
python/ghidra/sleigh/: arch_map.py  bridge_validator.py  decompiler_python.py  (+3 more)
scripts/: analyze_flow_report.py  categorize_diffs.py  categorize_remaining.py  check_branch_output.py  check_funcdata_parity.py  count_rule_stubs.py  count_stubs.py  diag_41b610.py  diag_41e499.py  diag_backward.py  diag_block_order.py  diag_branch.py  diag_bytes.py  diag_cpp_callsite.py  diag_cppblocks.py  diag_edge_diff.py  diag_extra_input.py  diag_flow_diff.py  diag_guardcalls.py  diag_heritage_spaces.py  diag_imports.py  diag_jt_resolve.py  diag_jumptable.py  diag_meq_order.py  diag_meq_sets.py  diag_multiequal.py  diag_multiequal2.py  diag_noreturn.py  diag_opdiff.py  diag_output_params.py  diag_pcode_0x41d800.py  diag_remaining.py  diag_remaining8.py  diag_rep.py  diag_return_const.py  diag_return_inputs.py  diag_return_match.py  diag_selfloop.py  diag_small_diffs.py  diag_space_identity.py  (+3 more)
tests/: test_action.py  test_analyzesigs.py  test_arch_integration.py  test_batch2d_rules.py  test_block.py  test_bridge_advanced.py  test_bridge_validator.py  test_callgraph.py  test_capability.py  test_cast.py  test_codedata.py  test_comment.py  test_compression.py  test_condexe.py  test_console_protocol.py  test_cover.py  test_cpexe_comparison.py  test_cpool.py  test_crc32.py  test_database.py  test_database_deep.py  test_deadcode.py  test_decompiler_python.py  test_double_deep.py  test_dynamic.py  test_emulateutil.py  test_encode_methods.py  test_expression.py  test_filemanage.py  test_float_format.py  test_fspec.py  test_fspec_deep.py  test_fspec_encode_decode.py  test_funcdata_deep.py  test_globalcontext.py  test_grammar.py  test_ifacedecomp.py  test_ifaceterm.py  test_inject.py  test_inject_sleigh.py  (+31 more)
tools/: _compare.py  _compare_sizes.py  _debug_callarg.py  _debug_callarg_final.py  _debug_console.py  _debug_flags.py  _debug_fullloop.py  _debug_indirect.py  _debug_propagate.py  _debug_stackoffset.py  _profile_run.py  action_compare.py  console.py  deploy.bat
(+125 files in other folders)
