[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pyghidra-decompiler"
version = "0.1.0"
description = "Pure-Python reimplementation of the Ghidra decompiler engine"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
readme = "README.md"
keywords = ["decompiler", "ghidra", "reverse-engineering", "binary-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Disassemblers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "sortedcontainers>=2.4.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "pytest-cov",
]

[project.urls]
Repository = "https://github.com/fjqisba/GhidraX"
Documentation = "https://github.com/fjqisba/GhidraX/tree/main/docs"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ghidra*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--timeout=120"
